--- a/app/views/audios/index.html.erb
+++ b/app/views/audios/index.html.erb
@@ -1,4 +1,3 @@
-
 <div class="row">
 <div class="col-md-8"><h1>Explore audios</h1></div>
 <!-- <button class="btn btn-default"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><%= link_to 'New Music', new_music_path %></button> -->
@@ -98,6 +97,7 @@
   </tr>
 <% end %>
 </table>
+<%= will_paginate @audios, renderer: BootstrapPagination::Rails %>
 <br />
 
 </div>
