--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -67,10 +67,14 @@
             <% end %>  
 
         <li>
-            <%= link_to 'Comment',new_comment_path(:post_id => music.id, :commenttype => @commenttype), :class=> "add-comment", :id => "add-comment" + music.id.to_s, :remote => true %> 
+            <%= link_to new_comment_path(:post_id => music.id, :commenttype => @commenttype), :class=> "add-comment", :id => "add-comment" + music.id.to_s, :remote => true do%> 
+            <i class="glyphicon glyphicon-comment"></i>
+            <% end %>
             <%= music.allcomments.size %>
              
-            <%= link_to 'Like', like_music_path(:id => music.id, :liketype => @liketype), class:"like-vote", method: :put, remote: true %>
+            <%= link_to  like_music_path(:id => music.id, :liketype => @liketype), class:"like-vote", method: :put, remote: true do%>
+            <i class="glyphicon glyphicon-thumbs-up"></i>
+            <% end %>
             <span class="like-count" data-id="<%= music.id %>">
               <%= music.likecount %>
             </span>
