fix bug on display commenet form

--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -79,7 +79,7 @@
               <%= music.likecount %>
             </span>
  
-          <!-- <div id="comment-form-<%= music.id %>" class="comment-form" style="display:none;"></div>  -->
+          <div id="comment-form-<%= music.id %>" class="comment-form" style="display:none;"></div> 
             <table id="music-top-comment-<%= music.id %>">
           <% if music.allcomments.size != 0 %>
            <!-- <td>Comments:</td> -->
