--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -25,6 +25,11 @@ ul.music-item li{
 	height: 80px;
 }
 
+.profile-mini-img {
+  width: 25px;
+  height: 25px;
+}
+
 .profile-large-img {
 	width: 200px;
 	height: 200px;
