--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,20 @@
             </ul>
             <% if session[:user_id] %>
               <ul class="nav navbar-nav navbar-right">
-                <li><%= link_to 'Logout', logout_path, method: :delete  %></li>
+                <!-- <li><%= link_to 'Logout', logout_path, method: :delete  %></li> -->
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                  <%= image_tag(User.find(session[:user_id]).image.url(:regular), :class => "profile-mini-img") %>
+                  <%= User.find(session[:user_id]).name%> 
+                  <span class="caret"></span>
+                  </a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><%= link_to "Profile", homepage_path(session[:user_id])  %></li>
+                    <li class="divider"></li>
+                    <li><%= link_to 'Logout', logout_path, method: :delete  %></li>
+                    
+                  </ul>
+                </li>
               </ul>
             <% else %> 
               <ul class="nav navbar-nav navbar-right">
@@ -128,5 +141,15 @@
 
 
 </body>
+<script type="text/javascript">
+// $('.nav li a').on('click', function() {
+//     $(this).parent().parent().find('.active').removeClass('active');
+//     $(this).parent().addClass('active').css('font-weight', 'bold');
+// });
+$(".nav a").on("click", function(){
+   $(".nav").find(".active").removeClass("active");
+   $(this).parent().addClass("active");
+});
+</script>
 </html>
 
