--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
               </ul>
             <% else %> 
               <ul class="nav navbar-nav navbar-right">
-                <li><%= link_to 'Login', login_path, method: :get    %></li>
+                <!-- <li><%= link_to 'Login', login_path, method: :get    %></li> -->
               </ul>       
             <% end %>
           </div><!--/.nav-collapse -->
@@ -111,7 +111,7 @@
         </li>
 
       <% else %>
-          <li><%= link_to 'Log In',    login_url    %></li>
+          <!-- <li><%= link_to 'Log In',    login_url    %></li> -->
         </ul>        
       <% end %>
 
