--- a/app/views/users/audiotimeline.html.erb
+++ b/app/views/users/audiotimeline.html.erb
@@ -1,3 +1,4 @@
+<% cache(cache_key_for_audiotimeline_table(@current_user)) do %>
 
 <!-- <%= link_to 'Back', :back %> -->
 <div class="row">
@@ -20,6 +21,8 @@
     <table class="table table-striped">
 
     <% @myaudios.each do |audio| %>
+
+      <% cache(cache_key_for_audiotimeline_row(audio)) do %>
      
       <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
         <td>
@@ -102,6 +105,9 @@
         </td>
 
       </tr>
+
+      <% end %>
+
     <% end %>
     </table>
     <%= will_paginate @myaudios, renderer: BootstrapPagination::Rails %>
@@ -109,3 +115,5 @@
 
 <br />
 </div>
+
+<% end %>
