--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -34,8 +34,14 @@
           <div class="hashtag">
             <!-- <%= music.tag_list %> -->
             <% music.tags.any? %>
+                <% count = 0 %>
                  <% music.tags.each do |tag| %>
-                    #<%= link_to tag.name, showtag_path(tag) %>
+                 <% count += 1 %>
+                 <% if count%2 == 0 %>
+                    <%= link_to "#" + tag.name, showtag_path(tag), class:"label label-info" %>
+                  <% else %>
+                    <%= link_to "#" + tag.name, showtag_path(tag), class:"label label-primary" %>
+                  <% end %>
             <% end %>
 
           </div> 
