--- a/app/views/audios/index.html.erb
+++ b/app/views/audios/index.html.erb
@@ -41,22 +41,6 @@
           </p>
         </li>
 
-        <!-- <li style="color:grey"><%= audio.created_at %></li> -->
-            <% 
-              dayDiff = (Time.zone.now - audio.created_at).to_i / 1.day
-              if dayDiff == 0 
-                hourDiff = (Time.zone.now - audio.created_at).to_i / 1.hour
-                if hourDiff == 0
-                  minDiff = (Time.zone.now - audio.created_at).to_i / 1.minute
-            %>
-                <div style="color:grey"><%= minDiff%> min ago</div> 
-                <% else %>
-                <div style="color:grey"><%= hourDiff%> hours ago</div> 
-                <% end %>
-            <% else %>
-              <div style="color:grey"><%= dayDiff%> days ago</div>
-            <% end %> 
-
         <li>
             <%= link_to new_comment_path(:post_id => audio.id, :commenttype => @commenttype), :class=> "add-comment", :id => "add-comment" + audio.id.to_s, :remote => true do%> 
             <i class="glyphicon glyphicon-comment"></i>
@@ -93,18 +77,31 @@
         </li>
 
 
+        <!-- <li style="color:grey"><%= audio.created_at %></li> -->
+            <% 
+              dayDiff = (Time.zone.now - audio.created_at).to_i / 1.day
+              if dayDiff == 0 
+                hourDiff = (Time.zone.now - audio.created_at).to_i / 1.hour
+                if hourDiff == 0
+                  minDiff = (Time.zone.now - audio.created_at).to_i / 1.minute
+            %>
+                <div style="color:grey"><%= minDiff%> min ago</div> 
+                <% else %>
+                <div style="color:grey"><%= hourDiff%> hours ago</div> 
+                <% end %>
+            <% else %>
+              <div style="color:grey"><%= dayDiff%> days ago</div>
+            <% end %> 
+
         
       </ul>
     </td>        
-<!--     <td class="list_actions">
-      <%= link_to 'Show', audio %><br/>
-      <%= link_to 'Edit', edit_audio_path(audio) %><br/>
-      <%= link_to 'Delete', audio, method: :delete,
-                  data: { confirm: 'Are you sure?' } %>
-    </td> -->
+
   </tr>
 <% end %>
 </table>
+<%= will_paginate @musics, renderer: BootstrapPagination::Rails %>
+
 <br />
 
 </div>
