delete notification after deleting posts; also fixed some also bugs

--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -61,6 +61,8 @@
             <i class="glyphicon glyphicon-comment"></i>
             <% end %>
             <%= music.allcomments.size %>
+
+            &nbsp
              
             <%= link_to  like_music_path(:id => music.id, :liketype => @liketype), class:"like-vote", method: :put, remote: true do%>
             <i class="glyphicon glyphicon-thumbs-up"></i>
