--- a/app/views/unreadlikes/view_like.html.erb
+++ b/app/views/unreadlikes/view_like.html.erb
@@ -46,6 +46,8 @@
             <i class="glyphicon glyphicon-comment"></i>
             <% end %>
             <%= @music.allcomments.size %>
+
+            &nbsp
              
             <%= link_to  like_music_path(:id => @music.id, :liketype => @liketype), class:"like-vote", method: :put, remote: true do%>
             <i class="glyphicon glyphicon-thumbs-up"></i>
@@ -128,6 +130,8 @@
             <i class="glyphicon glyphicon-comment"></i>
             <% end %>
             <%= @audio.audioallcomments.size %>
+
+            &nbsp
              
             <%= link_to like_audio_path(:id =>@audio.id, :liketype => @liketype), class:"like-vote", method: :put, remote: true do%>
             <i class="glyphicon glyphicon-thumbs-up"></i>
