--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -39,10 +39,10 @@
     <div><%= f.text_field :interest, size: 40, :class => "form-control" %></div>
   </div>
 
-  <div class="field">
+<!--   <div class="field">
     <div><%= f.label :picurl, 'Picture:' %></div>
     <div><%= f.text_field :picurl, size: 40, :class => "form-control" %></div>
-  </div>
+  </div> -->
 
   <div class="field">
     <div><%= f.label :password, 'Password:' %></div>
