--- a/app/views/users/contact.html.erb
+++ b/app/views/users/contact.html.erb
@@ -1,14 +1,19 @@
-<h2>Contact us!</h2>
+<!-- <h2>Contact us!</h2> -->
+<h2 class="cd-headline">
+  <span>Contact us!</span>
+</h1>
+
 <br>
 
 
 <p> <b>Email:</b> ytzhao@ucla.edu </p>
 
 <br>
+<br>
+
 
 <%= image_tag("ucla0.png", size: "200x80") %>
 
-<br>
 <br>
 <br>
 <br>
